2008-11-25  Matthias Wimmer  <m@tthias.eu>

    * jabberd/base/base_accept.cc: improvement in failure recovery for dynamic
    	routings

2008-11-22  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.cc: method signatures for OpenPGP support have changed
	in GnuTLS. Check if the new signatures can already be used.

2008-11-20  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_dynamic.cc: fixing potential problem when jsm starts
	before xdb instance

2008-09-26  Matthias Wimmer  <m@tthias.eu>

    * jabberd/jabberd.h: new: logging filters, fix: bouncing with sc-sessions
    * jabberd/lib/jabberdlib.h: same
    * jabberd/deliver.cc: same
    * jabberd/config.cc: logging filters
    * jsm/modules/mod_dynamic.cc: making dynamic hosts persistent
    * jsm/jsm.cc: same
    * jabberd/xdb.cc: same

2008-09-08  Matthias Wimmer  <m@tthias.eu>

    * jabberd/xdb.cc: fix problem with fixed puffer for printing integer
    	(problem reported by Vince Negri)

2008-09-07  Matthias Wimmer  <m@tthias.eu>

    * bootstrap: update for newer build tools
    * jabberd/jabberd.h: fix for dynamic routing extension
    * jabberd/base/base_connect.cc: same
    * jabberd/base/base_accept.cc: same
    * jabberd/deliver.cc: same

2008-05-05  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.cc: patch by Martin Matuschka to support newer GnuTLS

2007-11-20  Matthias Wimmer  <m@tthias.eu>

    * jabberd/jabberd.h: dynamically update the routing across instances
    * jabberd/base/base_connect.cc: same
    * jabberd/base/base_accept.cc: same
    * jabberd/deliver.cc: same

2007-11-19  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/jabberdlib.h: new namespace declaration NS_COMMAND
    * jabberd/deliver.cc: freeing all @-internal packets
    * jsm/jsm.h: adding/removing hostname dynamically to the session manager
    * jsm/modules/mod_disco.cc: same
    * jsm/modules/mod_browse.cc: same
    * jsm/modules/mod_dynamic.cc: same
    * jsm/jsm.cc: same
